--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             <a href="ciencias.html" class="menu-btn px-8 py-5 bg-green-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
                 <span>🪵 Biomassa e fontes de energia - Ciências</span>
             </a>
+                <div class="flex flex-col gap-2 mt-4">
+                    <a href="vini_gram.html" class="inline-block px-6 py-3 bg-emerald-600 text-white font-semibold rounded-lg shadow hover:bg-emerald-700 transition-colors text-center">
+                        Gramática 8º Ano: Sufixos, Mal x Mau, Transitividade, Vozes Verbais
+                    </a>
+                </div>
             <a href="quadri.html" class="menu-btn px-8 py-5 bg-amber-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
                 <span>🧱 Angulos do quadrilatero - Mat II</span>
             </a>
