--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <a href="clima_8.html" class="menu-btn px-8 py-5 bg-blue-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-blue-700 transition-colors flex items-center justify-center gap-3">
                     <span>🌦️ Clima e Atividades Humanas - 8º Ano</span>
                 </a>
+                <a href="regra3.html" class="menu-btn px-8 py-5 bg-indigo-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-indigo-700 transition-colors flex items-center justify-center gap-3">
+                    <span>📏 Regra de 3 Simples e Composta - Matemática</span>
+                </a>
             <a href="vozes.html" class="menu-btn px-8 py-5 bg-sky-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-sky-700 transition-colors flex items-center justify-center gap-3">
                 <span>📚 Vozes Verbais</span>
             </a>
